src/parser/src/grammar/UrosRMLParser.js
// Generated from src/grammar/UrosRML.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import UrosRMLListener from './UrosRMLListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class UrosRMLParser extends antlr4.Parser {

    static grammarFileName = "UrosRML.g4";
    static literalNames = [ null, "'thing'", "'interface'", "'implements'", 
                            "'properties'", "'behavior'", "'state'", "'on'", 
                            "'command'", "'event'", "'if'", "'else'", "'goto'", 
                            "'send'", "'commands'", "'events'", "'boolean'", 
                            "'UInt8'", "'Int32'", "'String'", null, null, 
                            null, null, "'('", "')'", "'{'", "'}'", "';'", 
                            "':'", "','", "'='", "'!='", "'>'", "'<'", "'>='", 
                            "'<='", "'.'" ];
    static symbolicNames = [ null, "THING", "INTERFACE", "IMPLEMENTS", "PROPERTIES", 
                             "BEHAVIOR", "STATE", "ON", "COMMAND", "EVENT", 
                             "IF", "ELSE", "GOTO", "SEND", "COMMANDS", "EVENTS", 
                             "BOOLEAN", "UINT8", "INT32", "STRING", "BOOLEAN_LITERAL", 
                             "UINT8_LITERAL", "INT32_LITERAL", "STRING_LITERAL", 
                             "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", 
                             "COLON", "COMMA", "EQUAL", "NOT_EQUAL", "GREATER", 
                             "LESS", "GREATER_EQUAL", "LESS_EQUAL", "DOT", 
                             "ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS" ];
    static ruleNames = [ "file", "interface", "implementsInterfaces", "interfaceBody", 
                         "commandsSection", "eventsSection", "command", 
                         "event", "paramList", "param", "thing", "thingBody", 
                         "propertiesSection", "property", "behaviorSection", 
                         "statechart", "state", "onRule", "gotoRule", "actionBlock", 
                         "action", "sendAction", "assignAction", "gotoAction", 
                         "ifAction", "expressionList", "expression", "op", 
                         "condition", "dataType", "value" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = UrosRMLParser.ruleNames;
        this.literalNames = UrosRMLParser.literalNames;
        this.symbolicNames = UrosRMLParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 26:
    	    		return this.expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	file() {
	    let localctx = new FileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, UrosRMLParser.RULE_file);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 64; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 64;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 2:
	                this.state = 62;
	                this.interface_();
	                break;
	            case 1:
	                this.state = 63;
	                this.thing();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 66; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===1 || _la===2);
	        this.state = 68;
	        this.match(UrosRMLParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interface_() {
	    let localctx = new InterfaceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, UrosRMLParser.RULE_interface);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 70;
	        this.match(UrosRMLParser.INTERFACE);
	        this.state = 71;
	        this.match(UrosRMLParser.ID);
	        this.state = 73;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 72;
	            this.implementsInterfaces();
	        }

	        this.state = 75;
	        this.match(UrosRMLParser.LBRACE);
	        this.state = 77;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===14 || _la===15) {
	            this.state = 76;
	            this.interfaceBody();
	        }

	        this.state = 79;
	        this.match(UrosRMLParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	implementsInterfaces() {
	    let localctx = new ImplementsInterfacesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, UrosRMLParser.RULE_implementsInterfaces);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 81;
	        this.match(UrosRMLParser.IMPLEMENTS);
	        this.state = 82;
	        this.match(UrosRMLParser.ID);
	        this.state = 87;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===30) {
	            this.state = 83;
	            this.match(UrosRMLParser.COMMA);
	            this.state = 84;
	            this.match(UrosRMLParser.ID);
	            this.state = 89;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interfaceBody() {
	    let localctx = new InterfaceBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, UrosRMLParser.RULE_interfaceBody);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 92;
	        		this._errHandler.sync(this);
	        		switch(this._input.LA(1)) {
	        		case 14:
	        		    this.state = 90;
	        		    this.commandsSection();
	        		    break;
	        		case 15:
	        		    this.state = 91;
	        		    this.eventsSection();
	        		    break;
	        		default:
	        		    throw new antlr4.error.NoViableAltException(this);
	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 94; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,6, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	commandsSection() {
	    let localctx = new CommandsSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, UrosRMLParser.RULE_commandsSection);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        this.match(UrosRMLParser.COMMANDS);
	        this.state = 97;
	        this.match(UrosRMLParser.LBRACE);
	        this.state = 99; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 98;
	            this.command();
	            this.state = 101; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===38);
	        this.state = 103;
	        this.match(UrosRMLParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	eventsSection() {
	    let localctx = new EventsSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, UrosRMLParser.RULE_eventsSection);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.match(UrosRMLParser.EVENTS);
	        this.state = 106;
	        this.match(UrosRMLParser.LBRACE);
	        this.state = 108; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 107;
	            this.event();
	            this.state = 110; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===38);
	        this.state = 112;
	        this.match(UrosRMLParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	command() {
	    let localctx = new CommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, UrosRMLParser.RULE_command);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.match(UrosRMLParser.ID);
	        this.state = 115;
	        this.match(UrosRMLParser.LPAREN);
	        this.state = 117;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===38) {
	            this.state = 116;
	            this.paramList();
	        }

	        this.state = 119;
	        this.match(UrosRMLParser.RPAREN);
	        this.state = 120;
	        this.match(UrosRMLParser.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	event() {
	    let localctx = new EventContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, UrosRMLParser.RULE_event);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(UrosRMLParser.ID);
	        this.state = 123;
	        this.match(UrosRMLParser.LPAREN);
	        this.state = 125;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===38) {
	            this.state = 124;
	            this.paramList();
	        }

	        this.state = 127;
	        this.match(UrosRMLParser.RPAREN);
	        this.state = 128;
	        this.match(UrosRMLParser.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	paramList() {
	    let localctx = new ParamListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, UrosRMLParser.RULE_paramList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130;
	        this.param();
	        this.state = 135;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===30) {
	            this.state = 131;
	            this.match(UrosRMLParser.COMMA);
	            this.state = 132;
	            this.param();
	            this.state = 137;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	param() {
	    let localctx = new ParamContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, UrosRMLParser.RULE_param);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 138;
	        this.match(UrosRMLParser.ID);
	        this.state = 139;
	        this.match(UrosRMLParser.COLON);
	        this.state = 140;
	        this.dataType();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	thing() {
	    let localctx = new ThingContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, UrosRMLParser.RULE_thing);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 142;
	        this.match(UrosRMLParser.THING);
	        this.state = 143;
	        this.match(UrosRMLParser.ID);
	        this.state = 145;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 144;
	            this.implementsInterfaces();
	        }

	        this.state = 147;
	        this.match(UrosRMLParser.LBRACE);
	        this.state = 149;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        if(la_===1) {
	            this.state = 148;
	            this.thingBody();

	        }
	        this.state = 151;
	        this.match(UrosRMLParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	thingBody() {
	    let localctx = new ThingBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, UrosRMLParser.RULE_thingBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 49200) !== 0)) {
	            this.state = 156;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 4:
	                this.state = 153;
	                this.propertiesSection();
	                break;
	            case 5:
	                this.state = 154;
	                this.behaviorSection();
	                break;
	            case 14:
	            case 15:
	                this.state = 155;
	                this.interfaceBody();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 160;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	propertiesSection() {
	    let localctx = new PropertiesSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, UrosRMLParser.RULE_propertiesSection);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 161;
	        this.match(UrosRMLParser.PROPERTIES);
	        this.state = 162;
	        this.match(UrosRMLParser.LBRACE);
	        this.state = 164; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 163;
	            this.property();
	            this.state = 166; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===38);
	        this.state = 168;
	        this.match(UrosRMLParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	property() {
	    let localctx = new PropertyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, UrosRMLParser.RULE_property);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 170;
	        this.match(UrosRMLParser.ID);
	        this.state = 171;
	        this.match(UrosRMLParser.COLON);
	        this.state = 172;
	        this.dataType();
	        this.state = 175;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===31) {
	            this.state = 173;
	            this.match(UrosRMLParser.EQUAL);
	            this.state = 174;
	            this.value();
	        }

	        this.state = 177;
	        this.match(UrosRMLParser.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	behaviorSection() {
	    let localctx = new BehaviorSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, UrosRMLParser.RULE_behaviorSection);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 179;
	        this.match(UrosRMLParser.BEHAVIOR);
	        this.state = 180;
	        this.match(UrosRMLParser.LBRACE);
	        this.state = 181;
	        this.statechart();
	        this.state = 182;
	        this.match(UrosRMLParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statechart() {
	    let localctx = new StatechartContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, UrosRMLParser.RULE_statechart);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 185; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 184;
	            this.state_();
	            this.state = 187; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	state_() {
	    let localctx = new StateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, UrosRMLParser.RULE_state);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this.match(UrosRMLParser.STATE);
	        this.state = 190;
	        this.match(UrosRMLParser.ID);
	        this.state = 191;
	        this.match(UrosRMLParser.LBRACE);
	        this.state = 195;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===7) {
	            this.state = 192;
	            this.onRule();
	            this.state = 197;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 199;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===12) {
	            this.state = 198;
	            this.gotoRule();
	        }

	        this.state = 201;
	        this.match(UrosRMLParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	onRule() {
	    let localctx = new OnRuleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, UrosRMLParser.RULE_onRule);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 203;
	        this.match(UrosRMLParser.ON);
	        this.state = 204;
	        _la = this._input.LA(1);
	        if(!(_la===8 || _la===9)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 205;
	        this.match(UrosRMLParser.ID);
	        this.state = 206;
	        this.match(UrosRMLParser.LPAREN);
	        this.state = 208;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===38) {
	            this.state = 207;
	            this.paramList();
	        }

	        this.state = 210;
	        this.match(UrosRMLParser.RPAREN);
	        this.state = 216;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===10) {
	            this.state = 211;
	            this.match(UrosRMLParser.IF);
	            this.state = 212;
	            this.match(UrosRMLParser.LPAREN);
	            this.state = 213;
	            this.condition();
	            this.state = 214;
	            this.match(UrosRMLParser.RPAREN);
	        }

	        this.state = 218;
	        this.match(UrosRMLParser.LBRACE);
	        this.state = 219;
	        this.actionBlock();
	        this.state = 220;
	        this.match(UrosRMLParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	gotoRule() {
	    let localctx = new GotoRuleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, UrosRMLParser.RULE_gotoRule);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 222;
	        this.match(UrosRMLParser.GOTO);
	        this.state = 223;
	        this.match(UrosRMLParser.ID);
	        this.state = 224;
	        this.match(UrosRMLParser.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	actionBlock() {
	    let localctx = new ActionBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, UrosRMLParser.RULE_actionBlock);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 226;
	        this.action();
	        this.state = 230;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 10)) & ~0x1f) === 0 && ((1 << (_la - 10)) & 268435469) !== 0)) {
	            this.state = 227;
	            this.action();
	            this.state = 232;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	action() {
	    let localctx = new ActionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, UrosRMLParser.RULE_action);
	    try {
	        this.state = 237;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 13:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 233;
	            this.sendAction();
	            break;
	        case 38:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 234;
	            this.assignAction();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 235;
	            this.gotoAction();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 236;
	            this.ifAction();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sendAction() {
	    let localctx = new SendActionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, UrosRMLParser.RULE_sendAction);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 239;
	        this.match(UrosRMLParser.SEND);
	        this.state = 240;
	        _la = this._input.LA(1);
	        if(!(_la===14 || _la===15)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 241;
	        this.match(UrosRMLParser.DOT);
	        this.state = 242;
	        this.match(UrosRMLParser.ID);
	        this.state = 243;
	        this.match(UrosRMLParser.LPAREN);
	        this.state = 245;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 20)) & ~0x1f) === 0 && ((1 << (_la - 20)) & 262159) !== 0)) {
	            this.state = 244;
	            this.expressionList();
	        }

	        this.state = 247;
	        this.match(UrosRMLParser.RPAREN);
	        this.state = 248;
	        this.match(UrosRMLParser.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignAction() {
	    let localctx = new AssignActionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, UrosRMLParser.RULE_assignAction);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 250;
	        this.match(UrosRMLParser.ID);
	        this.state = 251;
	        this.match(UrosRMLParser.EQUAL);
	        this.state = 252;
	        this.expression(0);
	        this.state = 253;
	        this.match(UrosRMLParser.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	gotoAction() {
	    let localctx = new GotoActionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, UrosRMLParser.RULE_gotoAction);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 255;
	        this.match(UrosRMLParser.GOTO);
	        this.state = 256;
	        this.match(UrosRMLParser.ID);
	        this.state = 257;
	        this.match(UrosRMLParser.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


